#278 fix loading tags on mobile

--- a/app/containers/App/base/base.less
+++ b/app/containers/App/base/base.less
@@ -284,15 +284,7 @@ h2 {
   .main {
     padding: 25px 10px 40px 10px;
   }
-  .cards-wrap {
-    &_tag {
-      .tag {
-        &:nth-child(n+17){
-          display: none;
-        }
-      }
-    }
-  }
+
   .section {
     margin-top: 20px;
     &-title {
